--- a/src/app/components/sales/create-sales-order/create-sales-order.component.scss
+++ b/src/app/components/sales/create-sales-order/create-sales-order.component.scss
@@ -68,4 +68,9 @@
   margin-top: 50px;
   display: flex;
   justify-content: flex-end;
+
+  .update-btn {
+    display: flex;
+    justify-content: space-between;
+  }
 }
