--- a/src/app/components/production/yarn-recovery/print-recovery-details/print-recovery-details.component.html
+++ b/src/app/components/production/yarn-recovery/print-recovery-details/print-recovery-details.component.html
@@ -53,7 +53,7 @@
     </div>
     <div>
       <div class="text-dark pb-4">Recovery Percentage</div>
-      <div class="font-size-16">
+      <div class="font-size-16 font-weight-bold">
         {{
           printService.yarnRecoveryDetails.data.yarnRecoveryPercent || 0
             | number : "1.2-2"
