--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -126,12 +126,12 @@
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
-      <ng-container matColumnDef="pendingQty">
+      <ng-container matColumnDef="balanceQty">
         <th mat-header-cell *matHeaderCellDef class="text-right">
-          Pending Qty
+          Balance Qty
         </th>
         <td mat-cell *matCellDef="let element" class="text-right">
-          {{ element.pendingQty | number : "1.0-3" }}
+          {{ element.balanceQty | number : "1.0-3" }}
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
