--- a/src/app/components/production/create-program/create-program.component.html
+++ b/src/app/components/production/create-program/create-program.component.html
@@ -108,12 +108,22 @@
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
-        <ng-container matColumnDef="quantity">
-          <th mat-header-cell *matHeaderCellDef>KGs</th>
+        <ng-container matColumnDef="programQuantity">
+          <th mat-header-cell *matHeaderCellDef>Program Quantity</th>
           <td mat-cell *matCellDef="let element">
             {{ element.programQuantity }}
           </td>
-          <td mat-footer-cell *matFooterCellDef>{{ getTotalKgs() }}</td>
+          <td mat-footer-cell *matFooterCellDef>{{ getTotalProgramQty() }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="productionQuantity">
+          <th mat-header-cell *matHeaderCellDef>Production Quantity</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.productionQuantity }}
+          </td>
+          <td mat-footer-cell *matFooterCellDef>
+            {{ getTotalProductionQty() }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="button">
