--- a/src/app/components/sales/deliveries/deliveries.component.html
+++ b/src/app/components/sales/deliveries/deliveries.component.html
@@ -15,11 +15,7 @@
       <ng-container *ngIf="!searchByOrderId">
         <mat-form-field appearance="fill">
           <mat-label>Delivery Date Range</mat-label>
-          <mat-date-range-input
-            [rangePicker]="picker"
-            [min]="minDate"
-            [max]="maxDate"
-          >
+          <mat-date-range-input [rangePicker]="picker" [min]="minDate">
             <input
               matStartDate
               formControlName="startDate"
