--- a/src/app/components/production/search-program/search-program.component.html
+++ b/src/app/components/production/search-program/search-program.component.html
@@ -16,11 +16,7 @@
 
       <mat-form-field appearance="fill" class="ml-24 w-30">
         <mat-label>Program Date Range</mat-label>
-        <mat-date-range-input
-          [rangePicker]="picker"
-          [min]="minDate"
-          [max]="maxDate"
-        >
+        <mat-date-range-input [rangePicker]="picker" [min]="minDate">
           <input
             matStartDate
             formControlName="startDate"
