--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -146,7 +146,7 @@
             mat-icon-button
             matTooltip="edit"
             aria-label="button with a edit icon"
-            (click)="updatePO(element)"
+            (click)="updatePO(element); $event.stopPropagation()"
           >
             <mat-icon>edit</mat-icon>
           </button>
@@ -258,6 +258,23 @@
                         | currency : "INR"
                     }}
                   </td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                  <th mat-header-cell *matHeaderCellDef>Action</th>
+                  <td mat-cell *matCellDef="let fibrePODts">
+                    <button
+                      mat-icon-button
+                      matTooltip="close"
+                      aria-label="button with a close icon"
+                      (click)="
+                        closePO(element?.pono, fibrePODts);
+                        $event.stopPropagation()
+                      "
+                    >
+                      <mat-icon>close</mat-icon>
+                    </button>
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
                 <tr
                   mat-header-row
