--- a/src/app/components/production/entry/production-entry/production-entry.component.html
+++ b/src/app/components/production/entry/production-entry/production-entry.component.html
@@ -11,7 +11,7 @@
   <div class="prog-details-container">
     <mat-card class="card w-65" [ngClass]="{ 'w-100': isUpdate }">
       <mat-card-header>
-        <mat-card-title>Mixing Details</mat-card-title>
+        <mat-card-title>Production Details</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class="form-container">
