--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -175,10 +175,7 @@
     </table>
   </div>
 
-  <div class="footer">
-    <button mat-raised-button (click)="goToSearch()">
-      <mat-icon>arrow_back</mat-icon>Back to search
-    </button>
+  <div class="footer" [ngClass]="{ 'update-footer': !!updatePoDetails }">
     <div *ngIf="!updatePoDetails; else updateBtn">
       <button mat-raised-button class="mr-16" (click)="resetData()">
         <mat-icon>refresh</mat-icon>Reset
@@ -188,6 +185,9 @@
       </button>
     </div>
     <ng-template #updateBtn>
+      <button mat-raised-button (click)="goToSearch()">
+        <mat-icon>arrow_back</mat-icon>Back to search
+      </button>
       <button mat-raised-button color="primary" (click)="updateOrder()">
         <mat-icon>save_alt</mat-icon>Update
       </button>
