--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
@@ -55,6 +55,10 @@
 .footer {
   margin-top: 50px;
   display: flex;
+  justify-content: flex-end;
+}
+
+.update-footer {
   justify-content: space-between;
 }
 
