--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
@@ -56,6 +56,10 @@
 .footer {
   margin-top: 50px;
   display: flex;
+  justify-content: flex-end;
+}
+
+.update-footer {
   justify-content: space-between;
 }
 
