--- a/src/app/components/purchases/fibre/fibre-search/close-fibre/close-fibre.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/close-fibre/close-fibre.component.html
@@ -1,8 +1,7 @@
 <section class="container">
   <h1 mat-dialog-title>
-    Are you sure to close the '{{ data?.fibrePODts?.fibreType }}' fibre in '{{
-      data?.pono
-    }}' PO?
+    Are you sure you want to close the '{{ data?.fibrePODts?.fibreType }}' fibre
+    in '{{ data?.pono }}' PO?
   </h1>
   <div mat-dialog-content class="form-container">
     <mat-form-field class="w-100 mt-8">
