--- a/src/app/components/sales/create-sales-order/create-sales-order.component.html
+++ b/src/app/components/sales/create-sales-order/create-sales-order.component.html
@@ -52,7 +52,7 @@
               [for]="orderDate"
             ></mat-datepicker-toggle>
             <mat-datepicker #orderDate></mat-datepicker>
-            <mat-error>This field is required.</mat-error>
+            <mat-error>Please enter valid date.</mat-error>
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-100">
             <mat-label>Order Creation Date</mat-label>
@@ -74,7 +74,7 @@
               [for]="receivedDate"
             ></mat-datepicker-toggle>
             <mat-datepicker #receivedDate></mat-datepicker>
-            <mat-error>This field is required.</mat-error>
+            <mat-error>Please enter valid date.</mat-error>
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-100">
             <mat-label>Due Days</mat-label>
