--- a/src/app/components/sales/delivery-invoice/delivery-invoice.component.html
+++ b/src/app/components/sales/delivery-invoice/delivery-invoice.component.html
@@ -59,7 +59,7 @@
                   [for]="picker"
                 ></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-                <mat-error>This field is required.</mat-error>
+                <mat-error>Please enter valid date.</mat-error>
               </mat-form-field>
             </div>
           </div>
