--- a/src/app/components/sales/receive-yarn-return/receive-yarn-return.component.html
+++ b/src/app/components/sales/receive-yarn-return/receive-yarn-return.component.html
@@ -37,7 +37,7 @@
               [for]="returnDate"
             ></mat-datepicker-toggle>
             <mat-datepicker #returnDate></mat-datepicker>
-            <mat-error>This field is required.</mat-error>
+            <mat-error>Please enter valid date.</mat-error>
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-40">
             <mat-label>Return DC No</mat-label>
