--- a/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
+++ b/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
@@ -42,7 +42,7 @@
               [for]="dcDate"
             ></mat-datepicker-toggle>
             <mat-datepicker #dcDate></mat-datepicker>
-            <mat-error>This field is required.</mat-error>
+            <mat-error>Please enter valid date.</mat-error>
           </mat-form-field>
         </div>
       </form>
