--- a/src/app/components/production/create-program/create-program.component.html
+++ b/src/app/components/production/create-program/create-program.component.html
@@ -57,16 +57,7 @@
               [for]="picker"
             ></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-            <mat-error
-              *ngIf="
-                form.get('programDate')?.hasError('matDatepickerParse');
-                else required
-              "
-              >Invalid date.</mat-error
-            >
-            <ng-template #required
-              ><mat-error>This field is required.</mat-error></ng-template
-            >
+            <mat-error>Please enter valid date.</mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="w-50">
