--- a/src/app/components/production/entry/production-entry/production-entry.component.html
+++ b/src/app/components/production/entry/production-entry/production-entry.component.html
@@ -91,7 +91,7 @@
             [for]="picker"
           ></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
-          <mat-error>This field is required.</mat-error>
+          <mat-error>Please enter valid date.</mat-error>
         </mat-form-field>
       </mat-card-content>
     </mat-card>
