--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -56,7 +56,7 @@
             [for]="picker"
           ></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
-          <mat-error>This field is required.</mat-error>
+          <mat-error>Please enter valid date.</mat-error>
         </mat-form-field>
       </form>
     </mat-card-content>
