--- a/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
@@ -41,7 +41,12 @@
             [for]="receivedDatePicker"
           ></mat-datepicker-toggle>
           <mat-datepicker #receivedDatePicker></mat-datepicker>
-          <mat-error>Please enter valid date.</mat-error>
+          <mat-error *ngIf="form.get('recdDate')?.hasError('required')"
+            >Please enter valid date.</mat-error
+          >
+          <mat-error *ngIf="form.get('recdDate')?.hasError('matDatepickerMax')"
+            >Should not be future Date</mat-error
+          >
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-25">
           <mat-label>Received DCNo</mat-label>
@@ -65,7 +70,12 @@
             [for]="dcDatePicker"
           ></mat-datepicker-toggle>
           <mat-datepicker #dcDatePicker></mat-datepicker>
-          <mat-error>Please enter valid date.</mat-error>
+          <mat-error *ngIf="form.get('dcDate')?.hasError('required')"
+            >Please enter valid date.</mat-error
+          >
+          <mat-error *ngIf="form.get('dcDate')?.hasError('matDatepickerMax')"
+            >Should not be greater than received date.</mat-error
+          >
         </mat-form-field>
       </form>
     </mat-card-content>
