Updated date validation message

--- a/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
@@ -45,7 +45,7 @@
             >Please enter valid date.</mat-error
           >
           <mat-error *ngIf="form.get('recdDate')?.hasError('matDatepickerMax')"
-            >Should not be future Date</mat-error
+            >Should not be future Date.</mat-error
           >
         </mat-form-field>
         <mat-form-field appearance="fill" class="w-25">
@@ -73,8 +73,19 @@
           <mat-error *ngIf="form.get('dcDate')?.hasError('required')"
             >Please enter valid date.</mat-error
           >
-          <mat-error *ngIf="form.get('dcDate')?.hasError('matDatepickerMax')"
+          <mat-error
+            *ngIf="
+              form.get('dcDate')?.hasError('matDatepickerMax') &&
+              form.get('recdDate')?.valid
+            "
             >Should not be greater than received date.</mat-error
+          >
+          <mat-error
+            *ngIf="
+              form.get('dcDate')?.hasError('matDatepickerMax') &&
+              form.get('recdDate')?.invalid
+            "
+            >Should not be future Date.</mat-error
           >
         </mat-form-field>
       </form>
