Updated date range error message

--- a/src/app/components/production/search-program/search-program.component.html
+++ b/src/app/components/production/search-program/search-program.component.html
@@ -35,10 +35,10 @@
           />
         </mat-date-range-input>
         <mat-error *ngIf="form.get('startDate')?.hasError('required')"
-          >Start Date is required.</mat-error
+          >Please enter valid start date.</mat-error
         >
         <mat-error *ngIf="form.get('endDate')?.hasError('required')"
-          >End Date is required.</mat-error
+          >Please enter valid end date.</mat-error
         >
         <mat-error
           *ngIf="
