--- a/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-received-order-search/fibre-received-order-search.component.html
@@ -35,10 +35,10 @@
           />
         </mat-date-range-input>
         <mat-error *ngIf="form.get('poStartDate')?.hasError('required')"
-          >Start Date is required.</mat-error
+          >Please enter valid start date.</mat-error
         >
         <mat-error *ngIf="form.get('poEndDate')?.hasError('required')"
-          >End Date is required.</mat-error
+          >Please enter valid end date.</mat-error
         >
         <mat-error
           *ngIf="
