--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.scss
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.scss
@@ -118,6 +118,14 @@ tr.row:not(.expanded-row) {
   background: rgb(50, 166, 39);
 }
 
-mat-icon {
+.icon {
   font-size: 20px;
+}
+
+.closed-row {
+  background-color: #fff0f0;
+
+  &:hover {
+    background-color: #fff0f0 !important;
+  }
 }
