--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -148,7 +148,7 @@
             aria-label="button with a edit icon"
             (click)="updatePO(element); $event.stopPropagation()"
           >
-            <mat-icon>edit</mat-icon>
+            <mat-icon class="icon">edit</mat-icon>
           </button>
           <button
             mat-icon-button
@@ -158,7 +158,7 @@
             color="accent"
             (click)="printPO(element, $event)"
           >
-            <mat-icon>print</mat-icon>
+            <mat-icon class="icon">print</mat-icon>
           </button>
         </td>
       </ng-container>
@@ -263,7 +263,9 @@
                   <th mat-header-cell *matHeaderCellDef>Action</th>
                   <td mat-cell *matCellDef="let fibrePODts">
                     <button
+                      *ngIf="!fibrePODts?.isPOItemClosed"
                       mat-icon-button
+                      color="warn"
                       matTooltip="close"
                       aria-label="button with a close icon"
                       (click)="
@@ -272,6 +274,19 @@
                       "
                     >
                       <mat-icon>close</mat-icon>
+                    </button>
+                    <button
+                      *ngIf="fibrePODts?.isPOItemClosed"
+                      mat-icon-button
+                      color="primary"
+                      matTooltip="reopen"
+                      aria-label="button with a restore icon"
+                      (click)="
+                        reopenPO(element?.pono, fibrePODts);
+                        $event.stopPropagation()
+                      "
+                    >
+                      <mat-icon>restore</mat-icon>
                     </button>
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
@@ -282,7 +297,8 @@
                 ></tr>
                 <tr
                   mat-row
-                  *matRowDef="let address; columns: innerDisplayedColumns"
+                  *matRowDef="let fibrePODts; columns: innerDisplayedColumns"
+                  [ngClass]="{ 'closed-row': fibrePODts?.isPOItemClosed }"
                 ></tr>
                 <tr class="mat-row" *matNoDataRow>
                   <td
