--- a/src/app/components/purchases/fibre/fibre-search/close-reopen-fibre/close-reopen-fibre.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/close-reopen-fibre/close-reopen-fibre.component.html
@@ -1,9 +1,5 @@
 <section class="container">
-  <h1 mat-dialog-title>
-    Are you sure you want to {{ data?.action }} the '{{
-      data?.fibrePODts?.fibreType
-    }}' fibre in '{{ data?.pono }}' PO?
-  </h1>
+  <h1 mat-dialog-title>{{ header }}</h1>
   <div mat-dialog-content class="form-container">
     <mat-form-field class="w-100 mt-8">
       <mat-label>Remarks</mat-label>
