--- a/src/app/components/production/search-production/search-production.component.html
+++ b/src/app/components/production/search-production/search-production.component.html
@@ -110,7 +110,7 @@
           Production Date
         </th>
         <td mat-cell *matCellDef="let row">
-          {{ row.productionDate | date : "dd/MM/yyyy" }}
+          {{ formatDate(row.productionDate) | date : "dd/MM/yyyy" }}
         </td>
       </ng-container>
 
@@ -127,7 +127,7 @@
       <ng-container matColumnDef="programDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Program Date</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.programDate | date : "dd/MM/yyyy" }}
+          {{ formatDate(row.programDate) | date : "dd/MM/yyyy" }}
         </td>
       </ng-container>
 
