Fixed update fibre PO

--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -70,9 +70,9 @@
 
   <div class="overflow-auto mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" class="table">
-      <ng-container matColumnDef="fibreName">
+      <ng-container matColumnDef="fibreType">
         <th mat-header-cell *matHeaderCellDef>Fibre</th>
-        <td mat-cell *matCellDef="let element">{{ element.fibreName }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.fibreType }}</td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
