delete yarn count changes

--- a/src/app/components/production/production-master/yarn-counts/yarn-counts.component.html
+++ b/src/app/components/production/production-master/yarn-counts/yarn-counts.component.html
@@ -36,7 +36,7 @@
             color="warn"
             matTooltip="Remove"
             aria-label="button with a delete icon"
-            (click)="removeYarnCounts()"
+            (click)="removeYarnCounts(element)"
           >
             <mat-icon>delete</mat-icon>
           </button>
