Added employee & payroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,6 +227,14 @@ app-print-delivery-invoice {
   margin-left: 24px;
 }
 
+.ml-40 {
+  margin-left: 40px;
+}
+
+.mt-4 {
+  margin-top: 4px;
+}
+
 .mt-8 {
   margin-top: 8px;
 }
