--- a/src/app/components/payroll/upload-attendance/upload-attendance.component.html
+++ b/src/app/components/payroll/upload-attendance/upload-attendance.component.html
@@ -47,7 +47,7 @@
         <mat-card-title>Data preview</mat-card-title>
         <div class="overflow-auto mt-8">
           <div class="mt-4 mb-8">
-            Total count: {{ attendanceData.data.length }}
+            Total records: {{ attendanceData.data.length }}
           </div>
           <table mat-table [dataSource]="attendanceData" class="table">
             <ng-container matColumnDef="employeeId">
