--- a/src/app/components/employee/employee-list/employee-list.component.scss
+++ b/src/app/components/employee/employee-list/employee-list.component.scss
@@ -12,6 +12,11 @@ table-container {
   background-color: #fff;
 }
 
+.table-container {
+  position: relative;
+  background-color: #fff;
+}
+
 .table {
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
