--- a/src/app/components/employee/employee-list/employee-details/employee-details.component.html
+++ b/src/app/components/employee/employee-list/employee-details/employee-details.component.html
@@ -59,7 +59,7 @@
     </div>
   </section>
 </div>
-<div mat-dialog-actions class="footer">
+<!-- <div mat-dialog-actions class="footer">
   <button mat-raised-button color="primary" (click)="updateEmployee()">
     <mat-icon aria-label="edit icon">edit</mat-icon>
     Update
@@ -68,4 +68,4 @@
     <mat-icon aria-label="delete icon">delete</mat-icon>
     Delete
   </button>
-</div>
+</div> -->
